SERVER-5243 mongos will route getLastError command to the config server when last insert triggered a split

Added a guard to prevent callbacks for the ScopeDBConnection pool to add connections for getLastError.